# Cpp

01_hey/: CMakeLists.txt  hey.cpp
02_student/: CMakeLists.txt
02_student/include/: Student.h
02_student/src/: main  main.cpp
03_library/: CMakeLists.txt
03_library/src/: Student.cpp
04_using_library/: CMakeLists.txt
04_using_library/src/: main.cpp
05_eigen/: eigen  eigen.cpp
06_ineritance/: inherited  inherited.cpp
08_std_vector/: std_vector  std_vector.cpp
09_object_composition_composition/: creature  creature.cpp
10_object_composition_aggregation/: teacher.cpp
11_pointers/: invalid_pointer  invalid_pointer.cpp  pointers  pointers.cpp
12_dynamic_memory_allocation/: dynamic_memory  dynamic_memory.cpp
13_reference_variables/: reference  reference.cpp
14_pointers_references_in_classes/: pointers_in_classes  pointers_in_classes.cpp
15_virtual_functions/: virtual  virtual.cpp  virtual2  virtual2.cpp  virtual3  virtual3.cpp  virtual_deconstructors  virtual_deconstructors.cpp
16_interfaces/: abstract_base_class.cpp  interface.cpp  interfaces  interfaces.cpp  pure_virtual_default_implementation.cpp
17_interfaces_headers/: CMakeLists.txt
17_interfaces_headers/include/: FileErrorLog.h  IErrorLog.h  IFileErrorLog.h  IScreenErrorLog.h  ScreenErrorLog.h
17_interfaces_headers/src/: FileErrorLog.cpp  IFileErrorLog.cpp  IScreenErrorLog.cpp  ScreenErrorLog.cpp  sqrt.cpp  sqrt_without_interface.cpp
